fixed turn button position on mobile viewer

--- a/components/games/poker/PokerGame/PokerGame.module.scss
+++ b/components/games/poker/PokerGame/PokerGame.module.scss
@@ -388,7 +388,7 @@
         margin-top: 0px;
       }
       @include media-phone390 {
-        margin-top: -35px;
+        margin-top: -110px;
         margin-left: 65px;
       }
 
